--- a/apps/ecommerce-frontend/src/app/layout/navbar/navbar.component.scss
+++ b/apps/ecommerce-frontend/src/app/layout/navbar/navbar.component.scss
@@ -1,3 +1,28 @@
 .menu-icon{
-  font-size: 1.3rem;
+  font-size: 1rem;
+  color:darkslategrey;
+  background-color: rgba(240, 248, 255, 0.694);
+  padding: 4px 6px;
+  border-radius: 50%;
+  margin-right: 1rem;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid antiquewhite;
+}
+.menu-icon:hover{
+  background-color: darkslategrey;
+  color: aliceblue;
+}
+
+.navbar-link{
+  color: darkslategrey;
+  font-size: 1rem;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.navbar-link:hover{
+  color: darkslategray;
+  text-decoration: none;
+  font-weight: bold;
+  border: none !important;
+  outline: none !important;
 }
